--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ body.menu-open{overflow:hidden;}
 
 /* ── HOME: HERO ── */
 .hero{position:relative;height:calc(100vh - 68px);min-height:560px;display:flex;align-items:flex-end;overflow:hidden;}
-.hero-bg{position:absolute;inset:0;z-index:0;background:url('https://images.unsplash.com/photo-1529156069898-49953e39b3ac?w=1800&q=85') center/cover no-repeat;animation:heroZoom 18s ease-in-out infinite alternate;}
+.hero-bg{position:absolute;inset:0;z-index:0;background:url('assets/images/Hero.JPG') center/cover no-repeat;animation:heroZoom 18s ease-in-out infinite alternate;}
 @keyframes heroZoom{from{transform:scale(1)}to{transform:scale(1.07)}}
 .hero-gradient{position:absolute;inset:0;z-index:1;background:linear-gradient(to right,rgba(13,17,23,.88) 0%,rgba(13,17,23,.5) 55%,rgba(13,17,23,.15) 100%),linear-gradient(to top,rgba(13,17,23,.78) 0%,transparent 55%);}
 .hero-content{position:relative;z-index:2;width:100%;padding:0 8vw 6rem;display:grid;grid-template-columns:1fr 1fr;gap:4rem;align-items:end;}
